--- a/Lecture13/Genome_Informatics_PartI.Rmd
+++ b/Lecture13/Genome_Informatics_PartI.Rmd
@@ -98,7 +98,15 @@ library(ggplot2)
 ggplot(expr,aes(geno, exp)) + geom_boxplot()
 ```
 
+```{r}
+ggplot(expr, aes(exp, fill = geno)) + geom_density(alpha = 0.2)
+```
 
+```{r}
+ggplot(expr, aes(geno, exp, fill=geno)) + 
+  geom_boxplot(notch=TRUE, outlier.shape = NA) + 
+  geom_jitter(shape=16, position=position_jitter(0.2), alpha=0.4)
+```
 
 
 
